--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "lodash": "^4.17.10",
     "sass-loader": "^7.0.1",
     "vue": "^2.5.2",
     "vue-cookies": "^1.5.6",
